# 2a-emulator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.tpl  flake.nix  intlogic.utf8  mr-mpram  projects.toml  test.ascii
.github/workflows/: cachix.yml  cargo-build.yml  cargo-test-and-build.yml  cargo-test.yml  verify-makefile.yml
design/: tui.utf8
displays/: and4.utf8  dflipflop.utf8  dflipflopc.utf8  input.utf8  interrupt.utf8.template  mux4x1.utf8  mux8x1.utf8  or2.utf8  register.utf8
emulator-2a/: Cargo.toml
emulator-2a-lib/: Cargo.toml
emulator-2a-lib/benches/: perf.rs  simple_program.rs
emulator-2a-lib/proptest-regressions/machine/: board.txt  bus.txt  mod.txt  tests.txt
emulator-2a-lib/proptest-regressions/parser/implementation/: tests.txt
emulator-2a-lib/src/: compiler.rs  lib.rs
emulator-2a-lib/src/machine/: alu.rs  board.rs  bus.rs  instruction.rs  microprogram_ram.rs  microprogram_ram_content.rs  mod.rs  register.rs  tests.rs
emulator-2a-lib/src/machine/raw/: mod.rs  signals.rs
emulator-2a-lib/src/parser/: mod.rs
emulator-2a-lib/src/parser/ast/: format.rs  mod.rs  trait_impls.rs
emulator-2a-lib/src/parser/implementation/: error.rs  mod.rs  tests.rs
emulator-2a-lib/src/runner/: mod.rs
emulator-2a-lib/syntax/: mr-mpram.pest  mrasm.pest
emulator-2a/src/: args.rs  error.rs  main.rs  supervisor.rs  testing.rs
emulator-2a/src/helpers/: mod.rs
emulator-2a/src/lib/: compiler.rs
emulator-2a/src/lib/machine/: board.rs  bus.rs  mod.rs
emulator-2a/src/lib/machine/raw/: mod.rs
emulator-2a/src/lib/parser/parser/: mod.rs
emulator-2a/src/runner/: mod.rs
emulator-2a/src/tui/: interface.rs  mod.rs  notification.rs  supervisor_wrapper.rs  wrapper_widgets.rs
emulator-2a/src/tui/input/: mod.rs  parser.rs
emulator-2a/src/tui/program_help_sidebar/: command_help.rs  mod.rs  program_display.rs  program_info.rs
emulator-2a/src/tui/show_widgets/: address_logic.rs  memory.rs  mod.rs  register_block.rs
emulator-2a/syntax/: mrasm.pest  tests.pest
program_tests/: calc-42-int.test  halt-on-int.test  should-halt.test  should-not-halt.test  simple-addition.test
programs/: 01-empty-line-before-mrasm.asm  04-multiple-labels-to-the-same-address.asm  06-all-instructions.mrasm  07-test-dst-src.mrasm  08-jzs.asm  10-interrupt.asm  11-simple-addition.asm  12-halt-on-int.asm  13-set-orgs.asm  14-fan.asm  15-board-test.asm  16-stack-overflow.asm  17-calc-42.asm
src/: args.rs  block.rs  cli.rs  compiler.rs  error.rs  executor.rs  fns.rs  helpers.rs  main.rs  node.rs  schematic.rs  supervisor.rs  testing.rs
src/block/: block_macro.rs  cache.rs
src/helpers/: constants.rs
src/lib/: alu.rs  board.rs  bus.rs  compiler.rs  instruction.rs  interface.rs  machine.rs  microprogram_ram.rs  mod.rs  register.rs  signal.rs
src/lib/machine/: alu.rs  board.rs  bus.rs  instruction.rs  microprogram_ram.rs  mod.rs  mp_ram.rs  signals.rs
src/lib/machine/raw/: mod.rs
src/lib/parser/: mod.rs
src/lib/parser/ast/: format.rs  mod.rs  trait_impls.rs
src/lib/parser/implementation/: error.rs  mod.rs
src/lib/parser/parser/: error.rs  mod.rs  tests.rs
src/machine/: board.rs  bus.rs  instruction.rs  mod.rs  mp_ram.rs  register.rs  signal.rs  widget_impl.rs
src/node/: cache.rs  node_macro.rs
src/runner/: mod.rs
src/schematic/: alu.rs  bus.rs  fns.rs  instruction.rs  mod.rs  mp_ram.rs  register.rs  signal.rs  types.rs
src/tui/: board_info_sidebar.rs  display.rs  events.rs  grid.rs  input.rs  interface.rs  mod.rs  supervisor_wrapper.rs
src/tui/input/: mod.rs  parser.rs
src/tui/program_help_sidebar/: command_help.rs  keybinding_help.rs  mod.rs  program_display.rs  program_info.rs
src/tui/show_widgets/: register_block.rs
static/: cli.yml  microprogram_ram_content.rs  mr-mpram  tests.pest
testing/: README.md
testing/programs/: 01-stacksize-16.asm  02-stacksize-32.asm  03-stacksize-48.asm  04-stacksize-64.asm  05-stacksize-0.asm  06-stacksize-noset.asm  07-minimal.asm  08-board-analog-output.asm  09-uart-send.asm  10-board-interrupts.asm  11-key-interrupt-helper.asm  12-simple-key-interrupt-check.asm  13-misr-testing-during-key-interrupts.asm  14-use-equ-instruction.asm  15-manipulate-call-stack.asm  16-counter-to-test-runner.asm  17-equ-variations.asm  18-programsize-auto.asm  19-programsize-set.asm  20-programsize-zero.asm  21-simple-counter.asm  22-simple-counter-manually.asm  23-just-halt.asm  24-just-error.asm  25-empty.asm  26-specific-input.asm
tests/: 02-comment-before-mrasm.mrasm  03-comment-in-mrasm.mrasm  05-same-labels-different-address.mrasm  09-jr.asm  10-interrupt.asm
