[package]
name = "emulator-2a"
version = "0.2.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"

[dependencies]
paste = "0.1.0"
log = "0.4.0"
pretty_env_logger = "0.3.0"
tui = "0.5.0"
termion = "1.5.0"
strfmt = "0.1.0"
bitflags = "1.0.0"
pest = "2.1.0"
pest_derive = "2.1.0"
failure = "0.1.0"
unicode-width = "0.1.5"

[dependencies.mr2a_asm_parser]
path = "../mr2a-asm-parser"

[dependencies.node]
path = "../node"

[dependencies.clap]
version = "~2.33.0"
features = ["yaml"]

[dependencies.tui]
version = "0.5.0"
# TODO: Use termion for linux and mac as soon as #1197 (https://github.com/rust-lang/cargo/issues/1197) is fixed
default-features = false
features = ["crossterm"]

[features]
# The std::fmt::Display implementation defaults to Display::to_utf8_string
# instead of Display::to_ascii_string
utf8 = []

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
