[package]
name = "emulator-2a"
version = "3.0.12"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"

[[bin]]
name = "2a-emulator"
path = "src/main.rs"

[dependencies]
paste = "0.1.0"
log = "0.4.0"
pretty_env_logger = "0.3.0"
strfmt = "0.1.0"
bitflags = "1.0.0"
pest = "2.1.0"
pest_derive = "2.1.0"
failure = "0.1.0"
unicode-width = "0.1.5"
colored = "1.8.0"
lazy_static = "1.3.0"
rand = "0.7.0"
rustyline = "5.0.3"
nom = "5.1.0"

[dependencies.parser2a]
git = "https://github.com/MalteT/2a-parser"
package = "parser-2a"
version = "6.0.0"
features = ["formatting"]

[dependencies.clap]
version = "~2.33.0"
features = ["yaml", "wrap_help"]

[dependencies.tui]
version = "0.8.0"
# TODO: Use termion for linux and mac as soon as #1197 (https://github.com/rust-lang/cargo/issues/1197) is fixed
default-features = false
features = ["crossterm"]

[dependencies.crossterm]
# Use tui's version
version = "*"

[features]
# The std::fmt::Display implementation defaults to Display::to_utf8_string
# instead of Display::to_ascii_string
utf8 = []

[profile.release]
opt-level = 1
