[package]
name = "emulator-2a-lib"
version = "0.2.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/MalteT/2a-emulator"
autobenches = false

[lib]
name = "emulator_2a_lib"
path = "src/lib.rs"

[dependencies]
log = "0.4.0"
bitflags = "1.0.0"
pest = "2.1.0"
pest_derive = "2.1.0"
lazy_static = "1.3.0"
enum_primitive = "0.1.0"
derive_builder = "0.9.0"
pad = "0.1.6"
colored = "2.0.0"
thiserror = "1.0.0"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
proptest = "0.10.0"
proptest-derive = "0.2.0"
criterion = "0.3"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.4", features = [ "flamegraph" ] }

[features]
default = []
wasm = ["wasm-bindgen"]

[[bench]]
name = "simple_program"
harness = false
