[package]
name = "emulator-2a"
version = "8.1.1"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/MalteT/2a-emulator"

[[bin]]
name = "2a-emulator"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
log = "0.4.0"
fern = "0.6.0"
atty = "0.2.14"
pest = "2.1.0"
pest_derive = "2.1.0"
colored = "2.0.0"
lazy_static = "1.3.0"
humantime = "2.0.1"
paw = "1.0.0"
derive_builder = "0.9.0"
thiserror = "1.0.0"
unicode-width = { version = "0.1.8", optional = true }
rustyline = { version = "7.1.0", optional = true }
nom = { version = "5.1.0", optional = true }
scopeguard = { version = "1.1.0", optional = true }

[dependencies.emulator-2a-lib]
version = "0.3.0"
path = "../emulator-2a-lib"

[dependencies.structopt]
version = "0.3.15"
features = ["wrap_help", "paw"]

[dependencies.tui]
version = "0.9.5"
# TODO: Use termion for linux and mac as soon as #1197 (https://github.com/rust-lang/cargo/issues/1197) is fixed
default-features = false
features = ["crossterm"]
optional = true

[dependencies.crossterm]
# Use tui's version
version = "^0.17"
optional = true

[features]
default = ["interactive-tui"]
# Enable the interactive tui
interactive-tui = ["tui", "rustyline", "nom", "scopeguard", "unicode-width", "crossterm"]
# The std::fmt::Display implementation defaults to Display::to_utf8_string
# instead of Display::to_ascii_string
utf8 = []
